2006-10-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* cimXmlRequest.c, constClass.c: 
	Update for 1443864: use free instead of release to get rid of resultdata
	arrays without causing a coredump.

2006-10-16  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* brokerUpc.c, msgqueue.c, providerDrv.c, providerMgr.c: 
	Fixed 1578051: race condition in provider initialization code.
	Further, hardened client (e.g. invokeProvider) code.

2006-10-06	Sven Schuetz

	* cimXmlRequest.c, qualifierProvider.c, providerMgr.c, providerDrv.c,
	Makefile.am, configure.ac, README, cimXmlGen.c
	Implemented 1569239: make qualifier provider configurable


2006-09-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* constClass.c: 
	Fixed 1567754: segfault on enumerate classes.

2006-09-29  Sven Schuetz

	* provDrc.c, qualifierProvider.c, internalProvider.c:
	Fixed 1567676: fixed several memory leaks

2006-09-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* sfcBroker.c: 
	Fixed 1567620: make sure provider process number isn't too low.
	At least 1 (no interop) or 2 (with interop) providers must be
	allowed.

2006-09-28  Sven Schuetz

	* cimXmlGen.c, cimXmlGen.h, cimXmlOps.y, cimXmlParser.c, cimXmlParser.h,
	cimXmlRequest.c, cmpidtx.h, cmpiftx.h, cmpimacsx.h, default.reg, Makefile.am,
	objectImpl.c, objectImpl.h, providerDrv.c, providerMgr.c, providerMgr.h,
	providerRegister.c, providerRegister.h, qualifier.c, qualifier.h,
	qualifierProvider.c, support.c, support.h, value.c, README:
	Fixed 1566963: Added qualifier support

2006-09-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* man/sfcbd.1.pre.in, control.c, providerDrv.c, README: 
	Post-fix 1549330: The automatic provider grouping is a configuration
	option now.

2006-09-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* instance.c, configure.ac: 